# gangof4

./: .gitignore  CMakeLists.txt  Jenkinsfile  LICENSE  README.md  gof_version.h.in  version.h.in
.circleci/: config.yml
it/: CMakeLists.txt  blockletrenderer.cxx  minorenderer.cxx  tetriminorenderer.cxx
resources/: bluemino.xcf  collision.aup  cyanmino.xcf  gameover.aup  gangof4.desktop.in  gangof4.xcf  greenmino.xcf  minosheet.xcf  move.aup  orangemino.xcf  pinkmino.xcf  purplemino.xcf  redmino.xcf  rotate.aup  rowfull.aup  yellowmino.xcf
resources/collision_data/eff/d0c/: eff0cd57.au
resources/gameover_data/eff/d1f/: eff1f244.au  eff1f38f.au  eff1f60f.au  eff1f7a6.au  eff1fc7e.au  eff1fd85.au  eff1ff6d.au  eff1ffa0.au
resources/move_data/eff/d1e/: eff1e3f1.au  eff1e822.au  eff1e90c.au
resources/rotate_data/eff/d08/: eff0819f.au
resources/rowfull_data/eff/d1a/: eff1a901.au  eff1ac10.au
src/: CMakeLists.txt  blocklet.hh  blockletrenderer.cxx  blockletrenderer.hh  board.cxx  board.hh  boardevent.hh  boardrenderer.cxx  boardrenderer.hh  circulartetriminostock.cxx  circulartetriminostock.hh  color.hh  consts.hh  difficultyselector.cxx  difficultyselector.hh  difficultytext.cxx  difficultytext.hh  easygamefactory.cxx  font.cxx  font.hh  fontfactory.cxx  fontfactory.hh  fontsize.hh  game.cxx  game.hh  gamedifficulty.hh  gamefactory.hh  gangof4.cxx  hardgamefactory.cxx  hardgamefactory.hh  help.cxx  help.hh  intro.cxx  intro.hh  labelvalue.cxx  labelvalue.hh  mediumgamefactory.cxx  mediumgamefactory.hh  memoryrwops.cxx  memoryrwops.hh  (+45 more)
src/board/: board.cxx  board.hh  boardcallback.hh  boardevent.hh  boardrenderer.cxx  boardrenderer.hh
src/game/: easygamefactory.cxx  easygamefactory.hh  game.cxx  game.hh  gamefactory.hh  hardgamefactory.cxx  hardgamefactory.hh  labelvalue.cxx  labelvalue.hh  mediumgamefactory.cxx  mediumgamefactory.hh  preview.cxx  preview.hh  soundcallback.hh
src/scorer/: fastadvancingscorer.cxx  fastadvancingscorer.hh  scorer.hh  slowadvancingscorer.cxx
src/sdl/: font.cxx  font.hh  memoryrwops.cxx  memoryrwops.hh  renderable.hh  renderer.cxx  renderer.hh  soundfile.hh  soundmemory.cxx  soundplayer.cxx  soundplayer.hh  text.cxx  text.hh  texture.hh  texturefile.hh  texturememory.cxx  window.cxx  window.hh
src/tetrimino/: circulartetriminostock.cxx  circulartetriminostock.hh  hardtetriminostock.cxx  hardtetriminostock.hh  minorenderer.hh  minotexture.hh  minotexturestore.cxx  minotexturestore.hh  normaltetriminostock.cxx  normaltetriminostock.hh  randomtetriminostock.cxx  randomtetriminostock.hh  tetrimino.cxx  tetrimino.hh  tetriminorenderer.cxx  tetriminorenderer.hh  tetriminostock.hh
tests/: CMakeLists.txt  mino.cxx  tetrimino.cxx
utils/: CMakeLists.txt  bin2cxx.cxx
